Horizontal scroll problem solved

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -612,11 +612,12 @@ body{
  .blog-card-container{
      display: grid;
      grid-template-columns: repeat(4,1fr);
+     grid-auto-rows: minmax(250px, auto);
      grid-gap: 30px;
      padding: 80px;
  }
  .blog-card-item{
-     width: 300px;
+     max-width: 300px;
      background-color: #cecdcd;
      padding-bottom: 20px;
  }
@@ -834,12 +835,19 @@ body{
     background-color: #b5b5b5;
     padding: 8px 15px;
 }
+.btn:hover{
+    background-color: #3baafe;
+}
 .btn a{
     font-size: 14px;
     text-transform: uppercase;
     color: #000;
     font-weight: 500;
 }
+.btn a:hover{
+    color: #f5f5f5;
+}
+
 .footer-bottom p{
     font-size: 16px;
     padding: 20px 0;
